[package]
name = "solana-native-program"
version = "0.22.0"
description = "Solana Noop program"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[dependencies]
log = "0.4.8"
solana-logger = { git = "https://github.com/solana-labs/solana", version = "0.22.0" }
solana-sdk = { git = "https://github.com/solana-labs/solana", version = "0.22.0" }

[lib]
crate-type = ["lib", "cdylib"]
name = "solana_native_program"

