[package]
name = "solana-native-program"
version = "0.0.1"
description = "Solana Native program"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/jackcmay/solana-native-program.git"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[dependencies]
log = "0.4.8"
solana-logger = { git = "https://github.com/solana-labs/solana", version = "0.22.0" }
solana-sdk = { git = "https://github.com/solana-labs/solana", version = "0.22.0" }

[lib]
crate-type = ["lib", "cdylib"]
name = "solana_native_program"

